# daemon_inotify

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
include/: linked_list.h
src/: daemon_inotify.c  linked_list.c  test_linked_list.c
